NetKubernetes/kubernetesApp/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
  labels: 
    name: app-service
    app: service
spec:
  type : ClusterIP
  selector:
    name: app
    type: netapi
  ports:
  - port: 80
    targetPort: 5000
