NetKubernetes/kubernetesApp/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  labels:
    name: myingress
spec:
  ingressClassName: nginx 
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-service
            port: 
              number: 80
